# internal/handlers/utils.go
@@ -1,0 +1,5 @@
+package handlers
+
+// @success 		200 {object} requests.CreateQuestion
+// @router 			/api/v1/_schema-holder [get]
+func schemaHolder() {}
